styles/main.css
/*----------------------------------------------------*/
/*  Variables                                         */
/*----------------------------------------------------*/


:root {

  /*	Spacing */
  --space-0: 0px;
	--space-px: 1px;
	--space-0-5: 0.125rem; /* 2px */
	--space-1: 0.25rem;    /* 4px */
	--space-1-5: 0.375rem; /* 6px */
	--space-2: 0.5rem;     /* 8px */
	--space-2-5: 0.625rem; /* 10px */
	--space-3: 0.75rem;    /* 12px */
	--space-3-5: 0.875rem; /* 14px */
	--space-4: 1rem;       /* 16px */
	--space-5: 1.25rem;    /* 20px */
	--space-6: 1.5rem;     /* 24px */
	--space-7: 1.75rem;    /* 28px */
	--space-8: 2rem;       /* 32px */
	--space-9: 2.25rem;    /* 36px */
	--space-10: 2.5rem;    /* 40px */
	--space-12: 3rem;      /* 48px */
	--space-14: 3.5rem;    /* 56px */

}



/*----------------------------------------------------*/
/*  Core styles                                       */
/*----------------------------------------------------*/


html {
	font-size: 16px;
}

@media only screen and (max-width: 800px) {
  html {
  	font-size: 18px;
  }
}

body {
	display: flex;
}

a {
	color: inherit;
	text-decoration: none;
}

p {
	margin: 0;
}

h3 {
  margin: 0 0 var(--space-3) 0;
}

ul {
  padding-inline-start: 0;
}



/*----------------------------------------------------*/
/*  Main/grid styles                                  */
/*----------------------------------------------------*/


main {
	flex: 1;
	overflow: auto;
	overscroll-behavior: contain;
  padding: var(--space-10);
/*	padding: var(--space-10) var(--space-10) var(--space-10) var(--space-5);*/
	position: sticky;
	text-align: left;
	top: var(--space-0);
	width: 100%;
}

.list {
	align-items: stretch;
	display: grid;
	grid-gap: var(--space-10);
	grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
	overflow: hidden;
	width: auto;
}

.pagination {
  margin-top: var(--space-14);
}

.pagination li {
	border-radius: 0.25rem;
  display: inline;
	margin-right: var(--space-2);
  padding: var(--space-2) var(--space-3);
	text-decoration: none;
}

.pagination li.active:hover {
	cursor: default;
}

.pagination li.active a {
	cursor: default;
}



/*----------------------------------------------------*/
/*  Wine card styles                                  */
/*----------------------------------------------------*/


article {
	position: relative;
}


/* Style images */

article a.image {
	border-radius: 0.5rem;
	display: block;
	height: 20vw;
	width: 100%;
}

article img {
	border-radius: 0.5rem;
	height: 100%;
	max-width: 100%;
	object-fit: cover;
	object-position: 50% 50%;
  width: 100%;
}


/* Style images with transparent backgrounds */

article.heavensmarket img,
article.kamp img,
article.wineandeggs img {
	object-fit: scale-down;
}

article.heavensmarket img {
	padding: 2vw 0;
}

@media only screen and (max-width: 800px) {
	article.heavensmarket img {
		padding: 2.5vw 0;
	}
}

article.wineandeggs img {
	padding: 0;
}

@media only screen and (max-width: 800px) {
	article.wineandeggs img {
		padding: 2.5vw 0;
	}
}

article.kamp img {
	padding: 0;
}


/* Text styles */

article .text {
	display: flex;
	flex-direction: column;
	gap: var(--space-1-5);
	margin-top: var(--space-3);
}

p.maker,
p.region {
  display: none;
}


/* Wine card type tag */

article > .type {
	border-radius: 10rem;
	cursor: pointer;
	display: inline-block;
	height: 1.125rem;
	left: var(--space-3);
	margin: 0 var(--space-2) var(--space-2) 0;
	padding: 0 var(--space-1-5);
	position: absolute;
	top: var(--space-3);
}




/*----------------------------------------------------*/
/*  Sidebar styles                                    */
/*----------------------------------------------------*/

nav {
	align-self: flex-start;
  display: flex;
  flex-direction: column;
	float: left;
  gap: var(--space-6);
	height: 100vh;
	overflow: auto;
	overscroll-behavior: contain;
  padding: var(--space-12) var(--space-10);
	position: sticky;
	top: 0;
	width: 18rem;
}

.logo svg {
	max-width: 8.2rem;
}

.tagline {
	display: block;
}

#filters {
  display: block;
}

.filter {
	margin-bottom: var(--space-6);;
}

.resultsButton {
	border-radius: 10rem;
	bottom: var(--space-4);
	padding: var(--space-3);
	position: fixed;
	text-align: center;
	width: calc(100% - var(--space-8));
}

.mobileButtons {
	position: fixed;
	right: var(--space-2-5);
}

.mobileButtons a {
	display: block;
	height: 2.222rem;
	padding: 0.15rem 0.5rem;
}

.mobileButtons svg{
	height: 2rem;
	width: 2rem;
}



/*----------------------------------------------------*/
/*  Search bar styles                                 */
/*----------------------------------------------------*/


.search {
  border: none;
  border-radius: 0.5rem !important;
  outline: 0;
	padding: var(--space-2) var(--space-2-5) var(--space-2) var(--space-3-5);
	width: 100%;
}

::placeholder {
  opacity: 1; /* Firefox */
}

/* Style the hover state */
/*
.search:hover, .search:focus {
   border: 1px solid #009688; 
   background-color: white; 
}
*/

/* Style the clear icon */
.search::-webkit-search-cancel-button{
    position:relative;
    right:-0.25rem;  
    -webkit-appearance: none;
    height: 1.25rem;
    width: 1.25rem;
    background-image: url('/assets/x-mark-outline.svg');
}



/*----------------------------------------------------*/
/*  Checkbox filter styles                            */
/*----------------------------------------------------*/

.checkboxFilter label {
	cursor: pointer;
  display: block;
	margin-bottom: var(--space-3);
  padding-left: var(--space-6);
	position: relative;
	user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
	-webkit-user-select: none;
}

/* Hide the browser's default checkbox */
.checkboxFilter input {
	cursor: pointer;
  height: 0;
  opacity: 0;
	position: absolute;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
	border: solid;
	border-radius: 0.25rem;
	border-width: 0.125rem;
	box-sizing: border-box;
	height: 1rem;
	left: 0;
  position: absolute;
  top: 0;
  width: 1rem;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

.checkboxFilter .checkmark:after {
	border: solid;
}

/* On mouse-over, add a background color */
/*
.checkboxFilter input:hover input ~ .checkmark {
}
*/

/* When the checkbox is checked, add a blue background */
.checkboxFilter input:checked ~ .checkmark {
	border: none;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
	display: none;
  position: absolute;
}

/* Show the checkmark when checked */
.checkboxFilter input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.checkboxFilter .checkmark:after {
  border-width: 0 0.125rem 0.125rem 0;
	height: 0.625rem;
  left: 0.3rem;
  top: 0.063rem;
	transform: rotate(45deg);
  width: 0.375rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
}

/* Hide checkbox filter for 'undefined' store */
label:has(> input[value="undefined"]) {
	display: none;
}



/*----------------------------------------------------*/
/*  Button filter styles                              */
/*----------------------------------------------------*/


.buttonFilter label {
	border-radius: 5rem;
	cursor: pointer;
	display: inline-block;
	margin: var(--space-1) var(--space-0-5);
	padding: var(--space-1) var(--space-2);
	user-select: none;
  white-space: nowrap;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-tap-highlight-color: transparent;
	-webkit-touch-callout: none;
  -webkit-user-select: none;
} 

.buttonFilter input {
  display: absolute;
	opacity: 0;
  position: absolute;
} 

/*Style default active button state*/
/*
.buttonFilter input:checked + label {
} 
*/



/*----------------------------------------------------*/
/*  Mobile styles                                     */
/*----------------------------------------------------*/


/* Layout */

@media only screen and (max-width: 800px) {
	body {
		display: block;
	}
	nav {
		height: auto;
		padding: var(--space-4);
		position: fixed;
		width: 100%;
		z-index: 100;
	}
	main {
		margin-top: 3.222rem;
		padding: var(--space-4);
	}
	.list {
		gap: var(--space-4);
	}
}


/* Set initial visibility of sidebar elements */


/* Hide logo & tagline on mobile */
@media only screen and (max-width: 800px) {
	.logo, .tagline {
	  display: none !important;
	}
}

/* Hide mobile buttons & results button on desktop */
@media only screen and (min-width: 800px) {
	.mobileButtons {
	  display: none;
	}
  .resultsButton {
    display: none;
  }
}

/* Show mobile buttons & results button on mobile */
@media only screen and (max-width: 800px) {
	.mobileButtons, .resultsButton {
	  display: block;
	}
}

/* Hide "hide" button initially on mobile */
#hideButton {
	display: none;
}


/* Search bar mobile styles */

@media only screen and (max-width: 800px) {
	.searchWrapper {
		display: flex;
		gap: var(--space-2);
	}
	.search {
		width: calc(100% - var(--space-12));
	}
}


/* Wine cards mobile styles */

@media only screen and (max-width: 800px) {
	article {
		padding-bottom: var(--space-2);
	}
	article a.image {
		height: 42vw !important;
	}
}


/* Filters panel mobile styles */

/* Set filters to always appear on desktop */
@media only screen and (min-width: 800px) {
	#filters {
		display: block !important;
	}
}

/* Style filters panel for mobile */
@media only screen and (max-width: 800px) {
	#filters {
		margin-bottom: 4.5rem;
		width: calc(100% - var(--space-10));
	}
}

/* Hide filters panel initially on mobile */
@media only screen and (max-width: 800px) {
	#filters {
		display: none;
	}
}

